chore: make the code compilable again and upgrade dependencies
Benchmark result is `166389 req/sec, 1000000 in 6010 msec(s)`, that's nice!